syntax = "proto3";

package vertexai.eventing.file.proto;

option java_package = "ai.vertex.eventing.file";
option java_outer_classname = "FileProtos";

import "base/context/context.proto";

message EventLog {
  // The name of the file to write events to.
  string filename = 1;
}

message Magic {
  enum Value {
    Unknown = 0;
    Eventlog = 0x4C747645;  // 'EvtL', little-endian
  }

  Value value = 1;
}

// An event log consists of a sequence of Record messages, each prefixed with a
// varint byte length.
message Record {
  // If present, the value must be equal to Magic.Eventlog.
  Magic magic = 1;

  // Some number of events.
  repeated context.proto.Event event = 2;
}
